# S2LikeLib

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
app/: CMakeLists.txt
app/s2edit/: CMakeLists.txt  S2EditConfig.hpp.in  main.cpp
include/: point.hpp
src/: CMakeLists.txt  Point.cpp
src/S2LL/: Point.hpp
src/S2LL/Core/: Coordinates.hpp  E2.cpp  Point.cpp  Point.hpp  Polygon.cpp  Region.cpp  Region.hpp  Regions.hpp  Utilities.hpp
src/S2LL/Parser/: Shapefile.cpp  Shapefile.hpp
